Added some icons and improving preview layout

--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -54,6 +54,7 @@
             android:id="@+id/superRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/screens"
             app:recyclerClipToPadding="false"
             app:recyclerPadding="5dp" />
 
