--- a/app/src/main/res/layout/preview.xml
+++ b/app/src/main/res/layout/preview.xml
@@ -5,8 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="380dp"
-    android:layout_margin="15dp"
+    android:layout_margin="16dp"
+    android:clickable="true"
     android:foreground="@drawable/selectable_item_background"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="@dimen/spacing_medium"
     app:cardElevation="2sp">
 
     <LinearLayout
@@ -21,36 +24,29 @@
             android:layout_height="0dp"
             android:layout_weight="2"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:paddingEnd="15dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingStart="15dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="fill_parent"
-                android:gravity="center_vertical"
-                android:orientation="vertical"
-                android:paddingEnd="15dp"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:paddingStart="15dp">
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:text="@string/app_name"
+                android:textAppearance="@android:style/TextAppearance.Small"
+                android:textColor="@color/dark_gray"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="2"
-                    android:text="@string/app_name"
-                    android:textAppearance="@android:style/TextAppearance.Medium"
-                    android:textColor="@color/black"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/author_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/app_name"
-                    android:textAppearance="@android:style/TextAppearance.Small" />
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/author_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textAppearance="@android:style/TextAppearance.Small"
+                android:textColor="@color/light_gray" />
 
         </LinearLayout>
 
@@ -62,11 +58,12 @@
             android:gravity="center">
 
             <ImageView
-                android:id="@+id/shot"
+                android:id="@+id/preview_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/app_name"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/preview_background" />
 
         </LinearLayout>
 
@@ -80,7 +77,7 @@
             android:weightSum="9">
 
             <LinearLayout
-                android:id="@+id/viewsLayout"
+                android:id="@+id/sharesLayout"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="3"
@@ -89,41 +86,19 @@
                 tools:ignore="UseCompoundDrawables,NestedWeights">
 
                 <ImageView
-                    android:layout_width="@dimen/default_size"
-                    android:layout_height="@dimen/default_size"
-                    android:contentDescription="@string/app_name" />
+                    android:layout_width="@dimen/spacing_xlarge"
+                    android:layout_height="@dimen/spacing_xlarge"
+                    android:contentDescription="@string/app_name"
+                    android:src="@mipmap/ic_share_black" />
 
                 <TextView
-                    android:id="@+id/views_count"
+                    android:id="@+id/shares_count"
                     android:layout_width="35dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_marginStart="5dp"
-                    android:textSize="12sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/likesLayout"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="3"
-                android:gravity="center"
-                android:orientation="horizontal"
-                tools:ignore="UseCompoundDrawables">
-
-                <ImageView
-                    android:layout_width="@dimen/default_size"
-                    android:layout_height="@dimen/default_size"
-                    android:contentDescription="@string/app_name" />
-
-                <TextView
-                    android:id="@+id/likes_count"
-                    android:layout_width="35dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginStart="5dp"
-                    android:textSize="12sp" />
+                    android:textAppearance="@android:style/TextAppearance.Small"
+                    android:textColor="@color/dark_gray" />
 
             </LinearLayout>
 
@@ -137,9 +112,10 @@
                 tools:ignore="UseCompoundDrawables">
 
                 <ImageView
-                    android:layout_width="@dimen/default_size"
-                    android:layout_height="@dimen/default_size"
-                    android:contentDescription="@string/app_name" />
+                    android:layout_width="@dimen/spacing_xlarge"
+                    android:layout_height="@dimen/spacing_xlarge"
+                    android:contentDescription="@string/app_name"
+                    android:src="@mipmap/ic_comment_black" />
 
                 <TextView
                     android:id="@+id/comments_count"
@@ -147,7 +123,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_marginStart="5dp"
-                    android:textSize="12sp" />
+                    android:textAppearance="@android:style/TextAppearance.Small"
+                    android:textColor="@color/dark_gray" />
 
             </LinearLayout>
 
