--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorAccent">#616161</color>
 
     <color name="screens">#F5F5F5</color>
+    <color name="white">#FFF</color>
 
     <color name="black">#212121</color>
     <color name="dark_gray">#616161</color>
