--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -55,6 +55,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/screens"
+            android:scrollbars="vertical"
+            app:layout_moreProgress="@layout/progress"
             app:recyclerClipToPadding="false"
             app:recyclerPadding="5dp" />
 
