--- a/app/src/main/res/layout/preview.xml
+++ b/app/src/main/res/layout/preview.xml
@@ -4,10 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="380dp"
+    android:layout_height="wrap_content"
     android:layout_margin="16dp"
     android:clickable="true"
     android:foreground="@drawable/selectable_item_background"
+    android:minHeight="380dp"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="@dimen/spacing_xsmall"
     app:cardElevation="2sp">
@@ -25,10 +26,11 @@
             android:layout_weight="2"
             android:gravity="center_vertical"
             android:orientation="vertical"
-            android:paddingEnd="15dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:paddingStart="15dp">
+            android:paddingEnd="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingStart="16dp"
+            android:paddingTop="16dp">
 
             <TextView
                 android:id="@+id/title"
@@ -55,6 +57,14 @@
                 android:textAppearance="@android:style/TextAppearance.Small"
                 android:textColor="@color/light_gray" />
 
+            <TextView
+                android:id="@+id/post_at"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textAppearance="@android:style/TextAppearance.Small"
+                android:textColor="@color/light_gray" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -67,7 +77,7 @@
             <ImageView
                 android:id="@+id/preview_image"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="260dp"
                 android:contentDescription="@string/app_name"
                 android:scaleType="centerCrop"
                 android:src="@drawable/preview_background" />
@@ -77,7 +87,7 @@
         <LinearLayout
             android:id="@+id/third_layer"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="30dp"
             android:layout_weight="1"
             android:baselineAligned="false"
             android:gravity="center"
