Adding label view to preview layout

--- a/app/src/main/res/layout/preview.xml
+++ b/app/src/main/res/layout/preview.xml
@@ -2,156 +2,160 @@
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:lv="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="400dp"
     android:layout_margin="16dp"
     android:clickable="true"
     android:foreground="@drawable/selectable_item_background"
-    android:minHeight="380dp"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="@dimen/spacing_xsmall"
     app:cardElevation="2sp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="10">
+        android:layout_height="match_parent">
+
+        <com.flyco.labelview.LabelView
+            android:id="@+id/tag_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="right"
+            lv:lv_background_color="#3F9FE0"
+            lv:lv_gravity="TOP_RIGHT"
+            lv:lv_text="Natureza"
+            lv:lv_text_size="12sp" />
 
         <LinearLayout
-            android:id="@+id/first_layer"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:paddingEnd="16dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingStart="16dp"
-            android:paddingTop="16dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:textAppearance="@android:style/TextAppearance.Small"
-                android:textColor="@color/dark_gray"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/author_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:textAppearance="@android:style/TextAppearance.Small"
-                android:textColor="@color/light_gray" />
-
-            <TextView
-                android:id="@+id/category_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:textAppearance="@android:style/TextAppearance.Small"
-                android:textColor="@color/light_gray" />
-
-            <TextView
-                android:id="@+id/post_at"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:textAppearance="@android:style/TextAppearance.Small"
-                android:textColor="@color/light_gray" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/second_layer"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="7"
-            android:gravity="center">
-
-            <ImageView
-                android:id="@+id/preview_image"
+            <LinearLayout
+                android:id="@+id/first_layer"
                 android:layout_width="match_parent"
-                android:layout_height="260dp"
-                android:contentDescription="@string/app_name"
-                android:scaleType="centerCrop"
-                android:src="@drawable/preview_background" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/third_layer"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_weight="1"
-            android:baselineAligned="false"
-            android:gravity="center"
-            android:weightSum="6">
-
-            <LinearLayout
-                android:id="@+id/sharesLayout"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="3"
-                android:gravity="center"
-                android:orientation="horizontal"
-                tools:ignore="UseCompoundDrawables,NestedWeights">
-
-                <ImageView
-                    android:layout_width="@dimen/spacing_xlarge"
-                    android:layout_height="@dimen/spacing_xlarge"
-                    android:contentDescription="@string/app_name"
-                    android:src="@mipmap/ic_action_social_share" />
+                android:layout_height="130dp"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingEnd="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingStart="16dp">
 
                 <TextView
-                    android:id="@+id/shares_count"
-                    android:layout_width="35dp"
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginStart="5dp"
+                    android:text="@string/app_name"
                     android:textAppearance="@android:style/TextAppearance.Small"
-                    android:textColor="@color/dark_gray" />
+                    android:textColor="@color/dark_gray"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/author_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/app_name"
+                    android:textAppearance="@android:style/TextAppearance.Small"
+                    android:textColor="@color/light_gray" />
+
+                <TextView
+                    android:id="@+id/post_at"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/app_name"
+                    android:textAppearance="@android:style/TextAppearance.Small"
+                    android:textColor="@color/light_gray" />
 
             </LinearLayout>
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/light_gray" />
-
             <LinearLayout
-                android:id="@+id/commentsLayout"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="3"
-                android:gravity="center"
-                android:orientation="horizontal"
-                tools:ignore="UseCompoundDrawables">
+                android:id="@+id/second_layer"
+                android:layout_width="match_parent"
+                android:layout_height="220dp"
+                android:gravity="center">
 
                 <ImageView
-                    android:layout_width="@dimen/spacing_xlarge"
-                    android:layout_height="@dimen/spacing_xlarge"
+                    android:id="@+id/preview_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:contentDescription="@string/app_name"
-                    android:src="@mipmap/ic_action_communication_comment" />
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/preview_background" />
 
-                <TextView
-                    android:id="@+id/comments_count"
-                    android:layout_width="35dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginStart="5dp"
-                    android:textAppearance="@android:style/TextAppearance.Small"
-                    android:textColor="@color/dark_gray" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/third_layer"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:weightSum="6">
+
+                <LinearLayout
+                    android:id="@+id/sharesLayout"
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    tools:ignore="UseCompoundDrawables,NestedWeights">
+
+                    <ImageView
+                        android:layout_width="@dimen/spacing_xlarge"
+                        android:layout_height="@dimen/spacing_xlarge"
+                        android:contentDescription="@string/app_name"
+                        android:src="@mipmap/ic_action_social_share" />
+
+                    <TextView
+                        android:id="@+id/shares_count"
+                        android:layout_width="35dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
+                        android:textAppearance="@android:style/TextAppearance.Small"
+                        android:textColor="@color/dark_gray" />
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/light_gray" />
+
+                <LinearLayout
+                    android:id="@+id/commentsLayout"
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    tools:ignore="UseCompoundDrawables">
+
+                    <ImageView
+                        android:layout_width="@dimen/spacing_xlarge"
+                        android:layout_height="@dimen/spacing_xlarge"
+                        android:contentDescription="@string/app_name"
+                        android:src="@mipmap/ic_action_communication_comment" />
+
+                    <TextView
+                        android:id="@+id/comments_count"
+                        android:layout_width="35dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
+                        android:textAppearance="@android:style/TextAppearance.Small"
+                        android:textColor="@color/dark_gray" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
