--- a/app/src/main/res/layout/preview.xml
+++ b/app/src/main/res/layout/preview.xml
@@ -3,7 +3,6 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:lv="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="400dp"
     android:layout_margin="16dp"
@@ -17,33 +16,45 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/preview_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/app_name"
+            android:scaleType="centerCrop"
+            android:src="@drawable/preview_background" />
+
         <com.flyco.labelview.LabelView
             android:id="@+id/tag_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_gravity="right"
-            lv:lv_background_color="#3F9FE0"
+            android:layout_gravity="end"
+            lv:lv_background_color="@color/colorAccent"
             lv:lv_gravity="TOP_RIGHT"
-            lv:lv_text="Natureza"
+            lv:lv_padding="10dp"
+            lv:lv_text="@string/without_tag"
             lv:lv_text_size="12sp" />
 
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="160dp"
+            android:layout_alignEnd="@+id/tag_name"
+            android:layout_alignParentBottom="true"
+            android:layout_alignRight="@+id/tag_name"
+            android:background="@color/opaque"
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/first_layer"
+                android:id="@+id/title_container"
                 android:layout_width="match_parent"
-                android:layout_height="130dp"
-                android:gravity="center_vertical"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/counters_container"
+                android:layout_alignParentTop="true"
                 android:orientation="vertical"
-                android:paddingEnd="16dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:paddingStart="16dp">
+                android:padding="16dp">
 
                 <TextView
                     android:id="@+id/title"
@@ -51,110 +62,92 @@
                     android:layout_height="wrap_content"
                     android:text="@string/app_name"
                     android:textAppearance="@android:style/TextAppearance.Small"
-                    android:textColor="@color/dark_gray"
+                    android:textColor="@color/white"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/author_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:text="@string/app_name"
                     android:textAppearance="@android:style/TextAppearance.Small"
-                    android:textColor="@color/light_gray" />
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:id="@+id/post_at"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="end"
                     android:text="@string/app_name"
                     android:textAppearance="@android:style/TextAppearance.Small"
-                    android:textColor="@color/light_gray" />
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/second_layer"
+                android:id="@+id/counters_container"
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
-                android:gravity="center">
-
-                <ImageView
-                    android:id="@+id/preview_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/app_name"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/preview_background" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/third_layer"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:gravity="center"
-                android:weightSum="6">
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:gravity="center_vertical|end"
+                android:orientation="horizontal">
 
                 <LinearLayout
-                    android:id="@+id/sharesLayout"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="3"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    tools:ignore="UseCompoundDrawables,NestedWeights">
+                    android:id="@+id/share_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
                     <ImageView
                         android:layout_width="@dimen/spacing_xlarge"
                         android:layout_height="@dimen/spacing_xlarge"
                         android:contentDescription="@string/app_name"
-                        android:src="@mipmap/ic_action_social_share" />
+                        android:src="@mipmap/ic_action_social_share"
+                        android:tint="@color/white" />
 
                     <TextView
                         android:id="@+id/shares_count"
-                        android:layout_width="35dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginStart="5dp"
+                        android:text="@string/app_name"
                         android:textAppearance="@android:style/TextAppearance.Small"
-                        android:textColor="@color/dark_gray" />
+                        android:textColor="@color/white" />
 
                 </LinearLayout>
 
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/light_gray" />
-
                 <LinearLayout
-                    android:id="@+id/commentsLayout"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="3"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    tools:ignore="UseCompoundDrawables">
+                    android:id="@+id/comment_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp">
 
                     <ImageView
                         android:layout_width="@dimen/spacing_xlarge"
                         android:layout_height="@dimen/spacing_xlarge"
                         android:contentDescription="@string/app_name"
-                        android:src="@mipmap/ic_action_communication_comment" />
+                        android:src="@mipmap/ic_action_communication_comment"
+                        android:tint="@color/white" />
 
                     <TextView
                         android:id="@+id/comments_count"
                         android:layout_width="35dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginStart="5dp"
+                        android:text="@string/app_name"
                         android:textAppearance="@android:style/TextAppearance.Small"
-                        android:textColor="@color/dark_gray" />
+                        android:textColor="@color/white" />
 
                 </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </RelativeLayout>
 
