--- a/app/src/main/res/layout/preview.xml
+++ b/app/src/main/res/layout/preview.xml
@@ -4,8 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:lv="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="420dp"
-    android:layout_margin="16dp"
+    android:layout_height="450dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginTop="8dp"
     android:clickable="true"
     android:foreground="@drawable/selectable_item_background"
     app:cardBackgroundColor="@color/white"
