--- a/app/src/main/res/layout/preview.xml
+++ b/app/src/main/res/layout/preview.xml
@@ -2,7 +2,6 @@
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:lv="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="450dp"
     android:layout_marginBottom="8dp"
@@ -24,9 +23,11 @@
             android:scaleType="centerCrop"
             android:src="@drawable/preview_background"
             app:label_backgroundColor="@color/dark_gray"
-            app:label_distance="70dp"
+            app:label_distance="110dp"
+            app:label_height="40dp"
             app:label_orientation="RIGHT_TOP"
-            app:label_text="@string/app_name" />
+            app:label_text="@string/app_name"
+            app:label_textSize="14sp" />
 
         <RelativeLayout
             android:id="@+id/content"
