--- a/app/src/main/res/layout/preview.xml
+++ b/app/src/main/res/layout/preview.xml
@@ -3,9 +3,12 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="450dp"
-    android:layout_marginBottom="8dp"
-    android:layout_marginTop="8dp"
+    android:layout_height="400dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
     android:clickable="true"
     android:foreground="@drawable/selectable_item_background"
     app:cardBackgroundColor="@color/white"
