--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,8 @@
 
     <color name="opaque">#B3000000</color>
 
+    <color name="black_overlay">#66000000</color>
+
     <!--
         100% — FF
         95% — F2
