--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -21,42 +21,9 @@
     <color name="colorPrimary">#039BE5</color>
     <color name="colorPrimaryLight">#64B5F6</color>
     <color name="colorPrimaryDark">#2962FF</color>
-    <color name="colorAccent">#616161</color>
-    <color name="colorAccentInverse">#EEEEEE</color>
+    <color name="colorAccent">#EEEEEE</color>
+    <color name="colorAccentInverse">#616161</color>
 
-    <color name="screens">#F5F5F5</color>
-    <color name="white">#FFF</color>
-
-    <color name="black">#212121</color>
-    <color name="dark_gray">#616161</color>
-    <color name="light_gray">#BDBDBD</color>
-
-    <color name="opaque">#B3000000</color>
-
-    <color name="black_overlay">#66000000</color>
-
-    <!--
-        100% — FF
-        95% — F2
-        90% — E6
-        85% — D9
-        80% — CC
-        75% — BF
-        70% — B3
-        65% — A6
-        60% — 99
-        55% — 8C
-        50% — 80
-        45% — 73
-        40% — 66
-        35% — 59
-        30% — 4D
-        25% — 40
-        20% — 33
-        15% — 26
-        10% — 1A
-        5% — 0D
-        0% — 00
-    -->
+    <color name="screens">#616161</color>
 
 </resources>
